kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mrr-segmenter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mrr-segmenter
  template:
    metadata:
      labels:
        app: mrr-segmenter
    spec:
      containers:
        - name: mrr-segmenter
          image: bufferapp/mrr-segmenter:0.2.0
          imagePullPolicy: Always
          ports:
          - name: shiny-http
            containerPort: 3405
      imagePullSecrets:
      - name: dockerhub
