kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mrr-segmenter-ingress
spec:
  backend:
    serviceName: mrr-segmenter
    servicePort: 80
